--- a/backend/frontend/package.json
+++ b/backend/frontend/package.json
@@ -11,6 +11,7 @@
     "date-fns": "^2.28.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-html-table-to-excel": "^2.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.7.0",
